--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "expressjs"
   ],
   "engines": {
-    "node": "18",
+    "node": "14.x",
     "npm": "8.x"
   },
   "scripts": {
@@ -31,7 +31,7 @@
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8",
     "multer": "^1.4.1",
-    "passport": "^0.4.0",
+    "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
     "sharp": "^0.30.5",
@@ -41,5 +41,6 @@
   "devDependencies": {
     "faker": "^4.1.0",
     "nodemon": "^2.0.16"
-  }
+  },
+  "repository": "https://github.com/samuelajalode/LibraryManagementSystem.git"
 }
