--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "expressjs"
   ],
   "engines": {
-    "node": "14",
-    "npm": "8.x"
+    "node": "14.x",
+    "yarn": "1.22.x"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
